# spin-python-latest-gfs

./: .pre-commit-config.yaml  Pipfile  app.py  gfs-latest.py  gfs_latest.py  pyproject.toml  spin.toml  test_gfs_latest.py
gfs_latest/: Pipfile
gfs_latest/spinwx/: __init__.py  gfs.py
spinwx/: gfs.py
