[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-python-gfs-latest"
version = "0.1.0"
description = "A spin WASM service to return the latest GFS run."

[tool.ruff]
src = ["spinwx", "."]
target-version = "py310"
select = ["ALL"]
ignore = []
unfixable = [
    # Don't remove `print` statements, just warn.
    "T201",
    "ERA001"
]

[tool.ruff.per-file-ignores]
"./test*.py" = ["S101"]
"./*.py" = ["S314"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-type-checking]
strict = false
